@@ -17,8 +17,8 @@ sub as_string {
 
     # add Status-Line required by NPH scripts
     if ( exists $response->{protocol} ) {
-        my ($protocol, $status) = @{$response}{qw/protocol status/};
-        # TODO: $status may contain $crlf
+        my $protocol = $response->{protocol};
+        my $status = $self->_process_newline( $response->{status} );
         push @lines, "$protocol $status$crlf";
     }
 
